Add javafx into the project